--- a/flash_card.html
+++ b/flash_card.html
@@ -12,62 +12,85 @@
 <body>
     <div class="container">
         <div class="flash-card">
-            <div class="front">
-                <div class="front-content">
-                    <h2>Question</h2>
-                    <p>What is the capital of France?</p>
+            <div class="question" id="question1">
+                <div class="front">
+                    <div class="front-content">
+                        <h2>Question</h2>
+                        <p>What is the capital of France?</p>
+                    </div>
+                    <div class="choice">
+                        <button class="option">A. Berlin</button>
+                        <button class="option">B. Madrid</button>
+                        <button class="option">C. Paris</button>
+                        <button class="option">D. Rome</button>
+                    </div>
                 </div>
-                <div class="choice">
-                    <button class="option">A. Berlin</button>
-                    <button class="option">B. Madrid</button>
-                    <button class="option">C. Paris</button>
-                    <button class="option">D. Rome</button>
-                </div>
-            </div>
-            <div class="back">
-                <div class="back-content">
-                    <h2>Answer</h2>
-                    <p>The capital of France is Paris.</p>
-                    <button class="back-button">Back to question</button>
-                </div>
-            </div>
-        </div>
-        <div class="flash-card">
-            <div class="front">
-                <div class="front-content">
-                    <h2>Question</h2>
-                    <p>What is the best game of all time?</p>
-                </div>
-                <div class="choice">
-                    <button class="option">A. Bloodborne</button>
-                    <button class="option">B. The Witcher 3</button>
-                    <button class="option">C. Dark Souls</button>
-                    <button class="option">D. Grand Theft Auto V</button>
+                <div class="back">
+                    <div class="back-content">
+                        <h2>Answer</h2>
+                        <p>The capital of France is Paris.</p>
+                        <button class="back-button">Back to question</button>
+                    </div>
                 </div>
             </div>
-            <div class="back">
-                <div class="back-content">
-                    <h2>Answer</h2>
-                    <p>The best game is Grand Theft Auto V</p>
-                    <button class="back-button">Back to question</button>
+            <div class="question" id="question2">
+                <div class="front">
+                    <div class="front-content">
+                        <h2>Question</h2>
+                        <p>What is the capital of Spain?</p>
+                    </div>
+                    <div class="choice">
+                        <button class="option">A. Barcelona</button>
+                        <button class="option">B. Madrid</button>
+                        <button class="option">C. Valencia</button>
+                        <button class="option">D. Seville</button>
+                    </div>
+                </div>
+                <div class="back">
+                    <div class="back-content">
+                        <h2>Answer</h2>
+                        <p>The capital of Spain is Madrid.</p>
+                        <button class="back-button">Back to question</button>
+                    </div>
+                </div>
+            </div>
+            <div class="question" id="question3" style="display:none;">
+                <div class="front">
+                    <div class="front-content">
+                        <h2>Question</h2>
+                        <p>What is the capital of Italy?</p>
+                    </div>
+                    <div class="choice">
+                        <button class="option">A. Milan</button>
+                        <button class="option">B. Venice</button>
+                        <button class="option">C. Florence</button>
+                        <button class="option">D. Rome</button>
+                    </div>
+                </div>
+                <div class="back">
+                    <div class="back-content">
+                        <h2>Answer</h2>
+                        <p>The capital of Italy is Rome.</p>
+                        <button class="back-button">Back to question</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="icon">
-            <div class="icon-cross-mark">
-                <a href="#close">&#10060;</a>
-            </div>
-            <div class="value">
-                <h3>1/10</h3>
-            </div>
-            <div class="icon-left-arrow">
-                <a href="#previous">&#8249;</a>
-            </div>
-            <div class="icon-right-arrow">
-                <a href="#next">&#8250;</a>
-            </div>
+        <div class="icon-cross-mark">
+            <a href="#close">&#10060;</a>
         </div>
+        <div class="value">
+            <h3>1/10</h3>
+        </div>
+        <div class="icon-left-arrow">
+            <a href="#previous">&#8249;</a>
+        </div>
+        <div class="icon-right-arrow">
+            <a href="#next">&#8250;</a>
+        </div>
+    </div>
 </body>
 
 </html>
